# APSI---Atividade-de-Design-Patterns

./: .gitignore  README.md
1-1-singleton-logging/: manage.py
1-1-singleton-logging/logging_app/: tests.py  urls.py  views.py
1-1-singleton-logging/logging_app/services/: logger_service.py
1-1-singleton-logging/singleton_project/: LoggerService.py  asgi.py  settings.py  urls.py  wsgi.py
Parte-1-Padroes-Criacionais/: README.md
Parte-1-Padroes-Criacionais/1-1-singleton-logging/: README.md  db.sqlite3  manage.py  pyvenv.cfg  tests.py  views.py
Parte-1-Padroes-Criacionais/1-1-singleton-logging/Scripts/: activate  activate.bat  activate.fish
Parte-1-Padroes-Criacionais/1-2-factory-notifications/: README.md  manage.py
Parte-2-Padroes-Estruturais/: README.md
Parte-2-Padroes-Estruturais/2-1-adapter/: README.md  manage.py
Parte-2-Padroes-Estruturais/2-2-decorator/: README.md  manage.py
Parte-2-Padroes-Estruturais/2-3-facade/: README.md
Parte-3-Padroes-Comportamentais/3-1-observer/: README.md  manage.py  pyproject.toml
Parte-3-Padroes-Comportamentais/3-1-observer/apsi/: asgi.py  settings.py  urls.py  wsgi.py
Parte-3-Padroes-Comportamentais/3-1-observer/observer/: apps.py  services.py  signals.py  tests.py  urls.py  views.py
Parte-3-Padroes-Comportamentais/3-2-strategy/: README.md  manage.py
Parte-3-Padroes-Comportamentais/3-3-chain-of-responsibility/: README.md
Parte-3-Padroes-Comportamentais/3-4-template-method/: README.md
Parte-4-Projeto-Integrador/: README.md
Parte-4-Projeto-Integrador/4-1-ecommerce-multiplos-padroes/: README.md
(+77 files in other folders)
